@@ -1,8 +1,7 @@
 package data.calendar
 
-import data.timeUtils.getModifiedDay
 import kotlinx.datetime.DayOfWeek
 
 class CalendarRepository() {
-    fun getToday(): DayOfWeek = getModifiedDay()
+    fun getToday(): DayOfWeek = getTodayWithOffset()
 }
